--- a/src/components/Combobox/components/ComboboxItems/ComboboxItems.modules.scss
+++ b/src/components/Combobox/components/ComboboxItems/ComboboxItems.modules.scss
@@ -10,3 +10,14 @@
   margin-top: var(--spacing-small);
 }
 
+.firstCategory {
+  padding-top: 0;
+}
+
+.categoryWithOptions {
+  margin-bottom: var(--spacing-xs);
+}
+
+.categoryWithoutOptions {
+  margin-bottom: 0;
+}
